--- a/sass/components/_body.scss
+++ b/sass/components/_body.scss
@@ -4,12 +4,31 @@
     font-family: $fontMain; 
     letter-spacing: 0.03em;
 }
-.container{
-    width: 1200px;
+.container {
+    width: 100%;
     padding-left: 15px;
     padding-right: 15px;
+}
+@media screen and (min-width: 480px) {
+    .container{
+        width: 480px;
+        margin-left: auto;
+        margin-right: auto;
+    }
+}
+@media screen and (min-width: 768px) {
+    .container{
+        width: 768px;
+        margin-left: auto;
+        margin-right: auto;
+    }
+}
+@media screen and (min-width: 1200px) {
+.container{
+    width: 1200px;
     margin-left: auto;
     margin-right: auto;
+    }
 }
 .visualy-hidden {
     position: absolute !important;
